# agent-replay-lab

./: .gitignore  README.md  pyproject.toml
cli/: __init__.py  main.py
comparisons/: benchmark-notes.md  benchmark-results.json  comparison-matrix.md  decision.md
core/: __init__.py  checkpoint.py  comparator.py  config.py  conversation.py  executor.py  models.py
docs/plans/: 2025-11-27-fork-compare-design.md  production-expansion-plan.md
examples/: e2e-test-config.yaml  fork-config.yaml
orchestrators/: __init__.py
orchestrators/dagster/: README.md  __init__.py  client.py  definitions.py  graph.py  jobs.py  ops.py
orchestrators/prefect/: README.md  __init__.py  client.py  flows.py  tasks.py
orchestrators/temporal/: README.md  __init__.py  activities.py  client.py  worker.py  workflows.py
patterns/: dagster-patterns.md  prefect-patterns.md  temporal-patterns.md
scripts/: benchmark.py
tests/: __init__.py  test_checkpoint.py  test_cli.py  test_config.py  test_conversation.py  test_dagster_e2e.py  test_executor.py  test_prefect_client.py  test_prefect_e2e.py  test_prefect_flows.py  test_prefect_setup.py  test_prefect_tasks.py  test_temporal_activities.py  test_temporal_client.py  test_temporal_e2e.py  test_temporal_worker.py  test_temporal_workflows.py
